# library_application

./: .gitignore  package.json
AppErrorDBLog_Library/: pyproject.toml
AppErrorDBLog_Library/app_error_db_log/: __init__.py  decorators.py  django_middleware.py  logger.py  models.py  sql_builder.py
AppErrorDBLog_Library/examples/: config.json  config.yaml  fastapi_example.py
AppErrorDBLog_Library/tests/: test_config.py  test_logger.py
Keyvault_library/: README.md  build_library.py  config.json  pyproject.toml
Keyvault_library/keyvault_library/: __init__.py  exceptions.py  logger.py  manager.py  validators.py
Keyvault_library/tests/: test_exceptions.py  test_logger.py  test_manager.py  test_validators.py
LogErrorAnalyzerApp/: .env.example  README.md  requirements.txt
LogErrorAnalyzerApp/app/: main.py
LogErrorAnalyzerApp/config/: app_error_db_log.config.json
LogErrorAnalyzerApp/tests/: test_api.py  test_library_integration.py  test_log_parser.py
MicroServices/AbsenceAPI/: .env.sample  Dockerfile  README.md  README_SETUP.MD  requirements.txt  run_server.py
MicroServices/ChatAPI/: .env.sample  Dockerfile  README.md  requirements.txt  run_server.py
MicroServices/ConfigRegistryAPI/: .env.sample  Dockerfile  README.md  requirements.txt  run_server.py
TestLibraryApp/: README.md  app.py  config.json  draw.drawio  keyvault_testing.py  requirements.txt  run_test_app.py
TestLibraryApp/docs/: app_error_db_log_library.md  enterprise_logging_library.md  jwt_validation_library.md  keyvault_library.md  llm_platform_library.md  pii_protection_library.md
TestLibraryApp/library_tests/: __init__.py  test_app_error_db_log_library.py  test_enterprise_logging_library.py  test_jwt_validation_library.py  test_keyvault_library.py  test_llm_platform_library.py  test_pii_protection_library.py
jwt_validation_library/examples/: jwks_example.py  static_public_key_example.py
jwt_validation_library/jwt_validation/: __init__.py  config.py  jwks.py  result.py  validator.py
jwt_validation_library/tests/: test_jwt_validator.py
libraries-dist/AppErrorDBLog_Library/: apperrordblog_library-0.1.0-py3-none-any.whl
libraries-dist/Keyvault_library/: keyvault_library-0.1.0-py3-none-any.whl
libraries-dist/jwt_validation_library/: jwt_validation_library-1.0.0-py3-none-any.whl
libraries-dist/llm_platform_library/: llm_platform_library-0.1.0-py3-none-any.whl
libraries-dist/logging_library/: enterprise_logging_library-1.0.0-py3-none-any.whl
libraries-dist/pii_protection_library/: pii_protection-1.0.0-py3-none-any.whl
libraries/AppErrorDBLog_Library/: .gitignore  MANIFEST.in  README.md
libraries/Keyvault_library/: README_APPLICATION_USAGE.md  README_ARCHITECTURE.md
libraries/LogErrorAnalyzerApp/: README_PAYLOAD.MD  run_server.py
libraries/jwt_validation_library/: README.md  pyproject.toml
libraries/jwt_validation_library/examples/: jwks_example.py  static_public_key_example.py
libraries/jwt_validation_library/jwt_validation/: __init__.py  errors.py  jwks.py  result.py  validator.py
libraries/jwt_validation_library/tests/: test_jwt_validator.py
libraries/llm_platform_library/: README.md  README_APPLICATION_USAGE.md  build_library.py  config.json
libraries/logging_library/: pyproject.toml
libraries/logging_library/docs/: architecture.md  best-practices.md  production-operations.md  troubleshooting.md
libraries/logging_library/enterprise_logging/: __init__.py
libraries/logging_library/enterprise_logging/adapters/: http.py
libraries/logging_library/enterprise_logging/config/: __init__.py  loader.py  schema.py
libraries/logging_library/enterprise_logging/context/: __init__.py  correlation.py
libraries/logging_library/enterprise_logging/core/: __init__.py  contracts.py  facade.py  logger.py  types.py
libraries/logging_library/enterprise_logging/formatter/: __init__.py  factory.py  json_formatter.py  text_formatter.py
libraries/logging_library/enterprise_logging/masking/: __init__.py  masker.py
libraries/logging_library/enterprise_logging/middleware/: __init__.py  asgi.py  wsgi.py
libraries/logging_library/enterprise_logging/serializers/: __init__.py  safe.py
libraries/logging_library/enterprise_logging/transport/: __init__.py  async_transport.py  console.py  factory.py  file.py  plugins.py
libraries/logging_library/examples/: basic_usage.py
libraries/logging_library/examples/fastify/: plugin.js
libraries/logging_library/examples/plugins/: custom_transport.py
libraries/logging_library/examples/springboot/: CorrelationLoggingFilter.java
libraries/logging_library/tests/: test_config.py  test_formatters.py  test_logger.py  test_masking.py  test_transports.py
libraries/pii_protection_library/: README.md
llm_platform_library/: README_ARCHITECTURE.md  pyproject.toml
llm_platform_library/llm_platform_library/: __init__.py  client.py  cost_tracker.py  department_router.py  logger.py  models.py  prompts.py  rag.py
llm_platform_library/tests/: test_client.py  test_cost_tracker.py  test_department_router.py  test_exceptions.py  test_logger.py  test_prompts.py  test_rag.py
logging_library/: README.md
logging_library/docs/: api.md  configuration.md  integration-guide.md  migration-guide.md
logging_library/enterprise_logging/: __init__.py
logging_library/examples/: basic_usage.py
logging_library/tests/: test_config.py  test_formatters.py  test_logger.py  test_masking.py  (+1 more)
pii_protection_library/: pyproject.toml
pii_protection_library/examples/config/: pii-config.json
pii_protection_library/examples/fastapi/: app.py
pii_protection_library/pii_protection/: __init__.py  audit.py  config_loader.py  exceptions.py  scanner.py  service.py  validators.py
pii_protection_library/pii_protection/crypto/: aes_gcm.py  key_provider.py
pii_protection_library/pii_protection/processors/: __init__.py  base.py  drop.py  encrypt.py  hash.py  mask.py  partial_mask.py  redact.py  tokenize.py
pii_protection_library/pii_protection/store/: base.py  memory.py
pii_protection_library/tests/: test_pii_protection.py
scripts/: collect-dists.js
(+177 files in other folders)
