[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AppErrorDBLog-Library"
version = "0.1.0"
description = "Reusable SQL Server application exception logging library."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyodbc>=5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "build>=1.2.0"
]
yaml = [
  "PyYAML>=6.0"
]
fastapi = [
  "fastapi>=0.100"
]
flask = [
  "flask>=3.0"
]
django = [
  "django>=4.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app_error_db_log*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "UP", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

