[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-platform-library"
version = "0.1.0"
description = "Reusable enterprise Python library for LLM calls, RAG, prompt management, cost tracking, and department routing."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "LLM Platform Library Maintainers" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pip-audit>=2.7.0",
  "build>=1.2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_platform_library*"]

[tool.setuptools.package-data]
llm_platform_library = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["llm_platform_library"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "N",
  "S",
  "UP",
  "W"
]
ignore = [
  "S101",
  "S603",
  "S607"
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true

