[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-logging-library"
version = "1.0.0"
description = "Reusable enterprise logging framework with structured logging, correlation, masking, and pluggable transports."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Enterprise Logging Library Maintainers" }]
keywords = ["logging", "structured-logging", "correlation", "observability", "security"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Logging",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
fastapi = ["starlette>=0.37"]
flask = ["flask>=3.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "build>=1.2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["enterprise_logging*"]

[tool.setuptools.package-data]
enterprise_logging = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["enterprise_logging"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "S", "UP", "W"]
ignore = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
